@@ -71,6 +71,7 @@ requests from users, including:
   Fred Rohde
   Steve Roberts
   Andrew Robinson
+  Ángel Rodríguez Laso
   Mark Rosenstein
   Dan Simpson
   Pam Shaw
