@@ -43,6 +43,8 @@
 	svylogrank(method="small") was wrong (though method="score" and method="large" are ok),
 	because of problems in obtaining the at-risk matrix from coxph.detail. (for Zhiwen Yao)
 
+	added as.svrepdesign.svyimputationList (for Ángel Rodríguez Laso)
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
